unpackaged/main/default/objects/CM_Upsert__e/CM_Upsert__e.object-meta.xml
<CustomObject>
    <label>CM Upsert</label>
    <pluralLabel>CM Upserts</pluralLabel>
</CustomObject>