unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Id__c.field-meta.xml
<CustomField>
    <fullName>CM_Id__c</fullName>
    <label>CM Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>