unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Name__c.field-meta.xml
<CustomField>
    <fullName>CM_Name__c</fullName>
    <label>CM Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>