unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Object__c.field-meta.xml
<CustomField>
    <fullName>CM_Object__c</fullName>
    <label>CM Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>