unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>CM_Parent_Id__c</fullName>
    <label>CM Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>