unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CM_Record_Type__c</fullName>
    <label>CM Record Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>