unpackaged/main/default/objects/CM_Upsert__e/fields/CM_Structure__c.field-meta.xml
<CustomField>
    <fullName>CM_Structure__c</fullName>
    <label>CM Structure</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>